--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -38246,5 +38246,109 @@
         "published": "Sun, 04 Jan 2026 02:00:00 GMT",
         "source": "YourStory RSS Feed",
         "summary": "Meanwhile, Eternal Founder Deepinder Goyal has batted for \"less regulation\" for India's gig economy, arguing that it will eventually help bring more people into the \"organised\" workforce."
+    },
+    {
+        "id": "https://techcrunch.com/2026/01/04/french-and-malaysian-authorities-are-investigating-grok-for-generating-sexualized-deepfakes/",
+        "title": "French and Malaysian authorities are investigating Grok for generating sexualized deepfakes",
+        "link": "https://techcrunch.com/2026/01/04/french-and-malaysian-authorities-are-investigating-grok-for-generating-sexualized-deepfakes/",
+        "published": "Sun, 04 Jan 2026 16:50:19 +0000",
+        "source": "TechCrunch",
+        "summary": "France and Malaysia have joined India in condemning Grok for creating sexualized deepfakes of women and minors."
+    },
+    {
+        "id": "https://techcrunch.com/2026/01/04/plaud-launches-a-new-ai-pin-and-a-desktop-meeting-notetaker/",
+        "title": "Plaud launches a new AI pin and a desktop meeting notetaker",
+        "link": "https://techcrunch.com/2026/01/04/plaud-launches-a-new-ai-pin-and-a-desktop-meeting-notetaker/",
+        "published": "Sun, 04 Jan 2026 16:28:10 +0000",
+        "source": "TechCrunch",
+        "summary": "Plaud is going after the likes of Granola to launch a desktop app that records online meetings"
+    },
+    {
+        "id": "https://www.theverge.com/tech/849332/belkin-charging-case-pro-nintendo-switch-2-battery",
+        "title": "You can charge the battery in Belkin\u2019s new Switch 2 power case without opening it",
+        "link": "https://www.theverge.com/tech/849332/belkin-charging-case-pro-nintendo-switch-2-battery",
+        "published": "2026-01-04T12:00:00-05:00",
+        "source": "The Verge",
+        "summary": "Belkin has announced a new version of one of its first accessories for the Switch 2 at CES 2026. The Charging Case Pro for Nintendo Switch 2 carries forward the same 10,000mAh internal battery as the original, but it's been redesigned so you don't need to remove the battery to charge it, and you no [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/tech/849759/belkin-ultracharge-modular-charging-dock-pro-power-bank-10-magnetic-ring-smartwatch",
+        "title": "Belkin\u2019s new 3-in-1 charging dock isn\u2019t limited to the Apple Watch",
+        "link": "https://www.theverge.com/tech/849759/belkin-ultracharge-modular-charging-dock-pro-power-bank-10-magnetic-ring-smartwatch",
+        "published": "2026-01-04T12:00:00-05:00",
+        "source": "The Verge",
+        "summary": "As convenient as 3-in-1 chargers can be, the vast majority of them work with a variety of smartphones and wireless earbuds, but only support one wearable: the Apple Watch. That's what sets the UltraCharge Modular Charging Dock that Belkin just announced at CES 2026 apart. Its design can accommodate different smartwatches, but you'll need to [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/tech/849948/belkin-connectair-wireless-hdmi-display-adapter-usb-c-plug-and-play",
+        "title": "Belkin\u2019s new HDMI adapter wirelessly connects to screens over 130 feet away",
+        "link": "https://www.theverge.com/tech/849948/belkin-connectair-wireless-hdmi-display-adapter-usb-c-plug-and-play",
+        "published": "2026-01-04T12:00:00-05:00",
+        "source": "The Verge",
+        "summary": "Belkin has announced a new wireless display adapter that works without the need for a Wi-Fi network. The ConnectAir Wireless HDMI Display Adapter includes a USB-C transmitter you connect to devices like laptops, tablets, and phones, and an HDMI receiver that plugs into a display. You don't need to install drivers or stick to compatible [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/tech/851393/plaud-notepin-s-desktop-app-ces",
+        "title": "Plaud updates the NotePin with a button",
+        "link": "https://www.theverge.com/tech/851393/plaud-notepin-s-desktop-app-ces",
+        "published": "2026-01-04T12:00:00-05:00",
+        "source": "The Verge",
+        "summary": "Plaud has updated its compact NotePin AI recorder. The new NotePin S is almost identical to the original, except for one major difference: a button. It's joined by a new Plaud Desktop app for recording audio in online meetings, which is free to owners of any Plaud Note or NotePin. The NotePin S has the [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/852741/switchbot-onero-h1-humanoid-household-robot-ces-2026",
+        "title": "SwitchBot says its humanoid household robot can do your laundry",
+        "link": "https://www.theverge.com/news/852741/switchbot-onero-h1-humanoid-household-robot-ces-2026",
+        "published": "2026-01-04T11:45:00-05:00",
+        "source": "The Verge",
+        "summary": "SwitchBot is bringing a new household robot to CES 2026. The smart home company is launching the Onero H1, which it calls \"the most accessible AI household robot.\" The announcement follows last year's debut of its multitasking household bot - a robot vacuum mounted to a mobile platform. SwitchBot says the Onero is a general-use [&#8230;]"
+    },
+    {
+        "id": "https://www.engadget.com/gaming/nintendo/this-belkin-charging-case-for-the-switch-2-has-a-screen-for-checking-battery-life-170029450.html?src=rss",
+        "title": "This Belkin charging case for the Switch 2 has a screen for checking battery life",
+        "link": "https://www.engadget.com/gaming/nintendo/this-belkin-charging-case-for-the-switch-2-has-a-screen-for-checking-battery-life-170029450.html?src=rss",
+        "published": "Sun, 04 Jan 2026 17:00:29 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Belkin just introduced the appropriately-named Charging Case Pro for Nintendo Switch 2 at CES. This is a high-end charging case specifically designed for Nintendo's latest console.</p>\n<p>The 10,000mAh power bank delivers up to 30W of fast charging, which is a decent enough metric. I'm more excited, however, about the bells and whistles. The Charging Case Pro boasts an LCD screen on the exterior, making it easy to keep track of remaining battery life. It also doubles as a tabletop stand, whic"
+    },
+    {
+        "id": "https://www.engadget.com/ai/plauds-latest-ai-wearable-has-a-button-for-flagging-key-moments-170000172.html?src=rss",
+        "title": "Plaud's latest AI wearable has a button for flagging key moments",
+        "link": "https://www.engadget.com/ai/plauds-latest-ai-wearable-has-a-button-for-flagging-key-moments-170000172.html?src=rss",
+        "published": "Sun, 04 Jan 2026 17:00:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Plaud is back with another conversation-recording AI wearable. This one, the NotePin S, is only a minor iteration on <a class=\"link\" href=\"https://www.engadget.com/ai/watch-out-theres-a-new-ai-pin-in-town-that-can-transcribe-all-your-conversations-153131281.html\" target=\"_blank\">the original NotePin</a>. This model adds\u2026 a button.</p><p>The recessed recording button replaces the squeeze-to-record mechanism on the 2024 original. A single long press starts recording. It also adds a new &quot;pr"
+    },
+    {
+        "id": "https://www.engadget.com/mobile/how-to-watch-the-samsung-first-look-ces-2026-presentation-190027420.html?src=rss",
+        "title": "How to watch the Samsung 'First Look' CES 2026 presentation",
+        "link": "https://www.engadget.com/mobile/how-to-watch-the-samsung-first-look-ces-2026-presentation-190027420.html?src=rss",
+        "published": "Sun, 04 Jan 2026 16:16:26 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<figure><img src=\"https://s.yimg.com/os/creatr-uploaded-images/2025-12/54afdb10-dd18-11f0-b2f7-d2b3086683ec\" style=\"height: 2659px; width: 4372px;\" /><figcaption>NurPhoto via Getty Images</figcaption></figure>\n<p>Samsung is arguably the 800-pound gorilla of CES, since many of the other consumer tech titans \u2014 Apple, Google, Microsoft, Meta, Amazon \u2014 either no longer have a presence, or have never shown up to begin with. In the past, that's given Samsung free range to bow a full spectrum of produc"
+    },
+    {
+        "id": "https://addyosmani.com/blog/21-lessons/",
+        "title": "Lessons from 14 Years at Google",
+        "link": "https://addyosmani.com/blog/21-lessons/",
+        "published": "Sun, 04 Jan 2026 15:23:54 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46488819\">Comments</a>"
+    },
+    {
+        "id": "https://blog.drjoshcsimmons.com/p/how-neurodivergent-brains-build-better",
+        "title": "Neurodivergent Brains Build Better Systems (2025)",
+        "link": "https://blog.drjoshcsimmons.com/p/how-neurodivergent-brains-build-better",
+        "published": "Sun, 04 Jan 2026 15:08:22 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46488661\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/plaud-notepin-s-ces-2026/",
+        "title": "Plaud has unveiled a new AI wearable that I'm seriously considering replacing Otter.ai with",
+        "link": "https://www.zdnet.com/article/plaud-notepin-s-ces-2026/",
+        "published": "Sun, 04 Jan 2026 17:00:40 GMT",
+        "source": "Latest news",
+        "summary": "The NotePin S keeps the sleek pill form factor with some upgrades."
     }
 ]
