--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -38350,5 +38350,37 @@
         "published": "Sun, 04 Jan 2026 17:00:40 GMT",
         "source": "Latest news",
         "summary": "The NotePin S keeps the sleek pill form factor with some upgrades."
+    },
+    {
+        "id": "https://mattwie.se/hinge-command-control-c2",
+        "title": "Using Hinge as a Command and Control Server",
+        "link": "https://mattwie.se/hinge-command-control-c2",
+        "published": "Sun, 04 Jan 2026 14:08:08 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46488101\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/should-you-upgrade-to-a-smart-ceiling-light-this-govee-ces-launch-has-you-covered/",
+        "title": "Should you upgrade to a smart ceiling light? This Govee CES launch has you covered",
+        "link": "https://www.zdnet.com/article/should-you-upgrade-to-a-smart-ceiling-light-this-govee-ces-launch-has-you-covered/",
+        "published": "Sun, 04 Jan 2026 17:00:00 GMT",
+        "source": "Latest news",
+        "summary": "Govee has just launched three new flagship smart home products, along with a convenient Samsung SmartThings integration."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/startups/centre-relaxes-norms-for-startups-to-avail-funds-from-dsir/articleshow/126337558.cms",
+        "title": "Centre relaxes norms for startups to avail funds from DSIR",
+        "link": "https://economictimes.indiatimes.com/tech/startups/centre-relaxes-norms-for-startups-to-avail-funds-from-dsir/articleshow/126337558.cms",
+        "published": "Sun, 04 Jan 2026 22:53:12 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "At the 42nd foundation day celebrations of the DSIR, the Union Science and Technology Minister Jitendra Singh announced the removal of the three-year viability criteria for deep-tech startups to avail financial assistance of up to Rs 1 crore under the Industrial Research and Development Promotion Program (IRDPP) of the department."
+    },
+    {
+        "id": "https://inc42.com/features/two-wheeler-ev-sales-in-2025-bajaj-tvs-gain-ground-ola-electrics-share-halves/",
+        "title": "Two-Wheeler EV Sales In 2025: Bajaj, TVS Gain Ground; Ola Electric\u2019s Share Halves",
+        "link": "https://inc42.com/features/two-wheeler-ev-sales-in-2025-bajaj-tvs-gain-ground-ola-electrics-share-halves/",
+        "published": "Sun, 04 Jan 2026 18:07:52 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2026/01/EV-Sales-2025-ftr.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />With a rising base, the growth in two-wheeler electric vehicle (2W EV) registrations saw a sharp slowdown in 2025. Industry&#8230;"
     }
 ]
