📚 Auto-update: News data refreshed - 2026-01-04 19:08 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -38382,5 +38382,29 @@
         "published": "Sun, 04 Jan 2026 18:07:52 +0000",
         "source": "Inc42 Media",
         "summary": "<img alt=\"\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2026/01/EV-Sales-2025-ftr.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />With a rising base, the growth in two-wheeler electric vehicle (2W EV) registrations saw a sharp slowdown in 2025. Industry&#8230;"
+    },
+    {
+        "id": "https://www.engadget.com/computing/how-to-watch-the-lenovo-tech-world-event-at-ces-2026-130004983.html?src=rss",
+        "title": "How to watch the Lenovo Tech World event at CES 2026",
+        "link": "https://www.engadget.com/computing/how-to-watch-the-lenovo-tech-world-event-at-ces-2026-130004983.html?src=rss",
+        "published": "Sun, 04 Jan 2026 19:01:27 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>We've known for several months now that tech giant Lenovo is hosting its Tech World event at Sphere is Las Vegas during <a href=\"https://www.engadget.com/big-tech/ces-2026-what-to-expect-from-techs-biggest-conference-in-january-120000369.html\">CES week</a>. And like many other tech conglomerates, the world's largest PC manufacturer by units shipped is centering its focus on AI. <a class=\"rapid-with-clickid\" href=\"https://shopping.yahoo.com/rdlw?merchantId=59bdf74a-dd5e-49bf-af3d-ef9ab46255e9&"
+    },
+    {
+        "id": "https://www.zdnet.com/article/govee-smart-ceiling-light-ces-2026/",
+        "title": "Should you upgrade to a smart ceiling light? Govee has a convincing case to do it",
+        "link": "https://www.zdnet.com/article/govee-smart-ceiling-light-ces-2026/",
+        "published": "Sun, 04 Jan 2026 17:00:00 GMT",
+        "source": "Latest news",
+        "summary": "Govee has just launched three new flagship smart home products, along with a convenient Samsung SmartThings integration."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/startups/deepinder-goyals-lat-aerospace-demonstrates-ultra-short-takeoff-test-flight/articleshow/126338473.cms",
+        "title": "Deepinder Goyal's LAT Aerospace demonstrates ultra-short takeoff test flight",
+        "link": "https://economictimes.indiatimes.com/tech/startups/deepinder-goyals-lat-aerospace-demonstrates-ultra-short-takeoff-test-flight/articleshow/126338473.cms",
+        "published": "Sun, 04 Jan 2026 23:36:58 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "On November 13, Goyal announced that LAT\u2019s electric unmanned aerial vehicle was almost ready for a test flight. It is expected to have a range of 60 minutes with the potential to fly between Mumbai and Pune."
     }
 ]
