--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -38406,5 +38406,69 @@
         "published": "Sun, 04 Jan 2026 23:36:58 +0530",
         "source": "Tech-Economic Times",
         "summary": "On November 13, Goyal announced that LAT\u2019s electric unmanned aerial vehicle was almost ready for a test flight. It is expected to have a range of 60 minutes with the potential to fly between Mumbai and Pune."
+    },
+    {
+        "id": "https://www.theverge.com/news/854091/aliro-smart-lock-standard-launches-2026-apple-uwb-nfc",
+        "title": "Aliro arrives \u2013 the smart lock standard is set to launch this year",
+        "link": "https://www.theverge.com/news/854091/aliro-smart-lock-standard-launches-2026-apple-uwb-nfc",
+        "published": "2026-01-04T15:00:13-05:00",
+        "source": "The Verge",
+        "summary": "The long-delayed smart lock standard Aliro is finally launching. The first specification, which standardizes NFC-based tap-to-unlock and UWB hands-free unlocking for smart locks, will arrive early this year, according to the Connectivity Standards Alliance (CSA). \"We're delighted to share that Aliro, the CSA's standardized credential and communication protocol that lets trusted smartphones and wearables act [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/tech/854082/lg-cloid-home-robot-fold-laundry-ces",
+        "title": "LG\u00a0says its\u00a0CLOiD home robot will be folding laundry and making breakfast at CES",
+        "link": "https://www.theverge.com/tech/854082/lg-cloid-home-robot-fold-laundry-ces",
+        "published": "2026-01-04T14:13:01-05:00",
+        "source": "The Verge",
+        "summary": "LG teased that it would be showing off a new robot for a \"zero labor home\" at CES. We now have a bit more detail on what to expect. The company says that its CLOiD home robot can fetch milk from the fridge, put a croissant in the oven, and even do some laundry, including [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/story/trump-wants-venezuelas-oil-getting-it-might-not-be-so-simple/",
+        "title": "Trump Wants Venezuela's Oil. Getting It Might Not Be So Simple",
+        "link": "https://www.wired.com/story/trump-wants-venezuelas-oil-getting-it-might-not-be-so-simple/",
+        "published": "Sun, 04 Jan 2026 19:25:38 +0000",
+        "source": "WIRED",
+        "summary": "The administration has made it clear that Nicol\u00e1s Maduro's capture was tied to Venezuela's vast oil reserves. Much less certain is how US companies will actually access them\u2014or if they even want to."
+    },
+    {
+        "id": "https://www.engadget.com/computing/laptops/lgs-aerominum-gram-pro-laptops-feel-impossibly-light-and-strong-200317743.html?src=rss",
+        "title": "LG's 'Aerominum' Gram Pro laptops feel impossibly light and strong",
+        "link": "https://www.engadget.com/computing/laptops/lgs-aerominum-gram-pro-laptops-feel-impossibly-light-and-strong-200317743.html?src=rss",
+        "published": "Sun, 04 Jan 2026 20:03:17 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>For years, LG has pushed its ultra-light Gram laptops as a way to stand out from the PC crowd, for better or worse. I was't a big fan of the flex-prone case in the <a class=\"link\" href=\"https://www.engadget.com/2017-04-17-lg-gram-review.html\" target=\"_blank\">2017 Gram</a>, and we had similar concerns with the <a class=\"link\" href=\"https://www.engadget.com/2019-11-30-lg-gram-17-review-price-specs-big-screen-thin-light.html\" target=\"_blank\">first 17-inch Gram in 2019</a>. But in fairness, it's "
+    },
+    {
+        "id": "https://www.engadget.com/gaming/how-to-watch-the-lego-ces-2026-press-conference-live-130005019.html?src=rss",
+        "title": "How to watch the Lego CES 2026 press conference live",
+        "link": "https://www.engadget.com/gaming/how-to-watch-the-lego-ces-2026-press-conference-live-130005019.html?src=rss",
+        "published": "Sun, 04 Jan 2026 19:23:55 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<figure><img src=\"https://s.yimg.com/os/creatr-uploaded-images/2025-12/ced0c170-dd13-11f0-b394-1dea3c7b6af3\" style=\"height: 5464px; width: 8192px;\" /><figcaption>picture alliance via Getty Images</figcaption></figure>\n<p>Are you a Lego Adult? No guilt implied \u2014 we hear you, whether you enjoy building <a href=\"https://www.engadget.com/entertainment/tv-movies/the-lego-ultimate-death-star-set-includes-over-9000-pieces-and-costs-1000-183556661.html\">Death Stars</a>, <a href=\"https://www.engadget.com"
+    },
+    {
+        "id": "https://www.engadget.com/home/how-to-watch-the-hisense-ces-2026-press-conference-live-190040504.html?src=rss",
+        "title": "How to watch the Hisense CES 2026 press conference live",
+        "link": "https://www.engadget.com/home/how-to-watch-the-hisense-ces-2026-press-conference-live-190040504.html?src=rss",
+        "published": "Sun, 04 Jan 2026 19:18:05 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<figure><img src=\"https://s.yimg.com/os/creatr-uploaded-images/2025-12/834aecc0-dcf1-11f0-b7de-13a29302f310\" style=\"height: 4000px; width: 6000px;\" /><figcaption>Xinhua News Agency via Getty Images</figcaption></figure>\n<p>Hisense is typically best known for its affordable electronics and home appliances, from TVs to refrigerators. But at CES 2025, the China-based company showed off its premium side with a massive 136-inch micro LED TV \u2014 now available for a jaw-dropping <a class=\"rapid-with-clic"
+    },
+    {
+        "id": "https://queue.acm.org/detail.cfm?id=3534854",
+        "title": "Linear Address Spaces: Unsafe at any speed",
+        "link": "https://queue.acm.org/detail.cfm?id=3534854",
+        "published": "Wed, 31 Dec 2025 07:57:53 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46442282\">Comments</a>"
+    },
+    {
+        "id": "https://ma.ttias.be/web-development-is-fun-again/",
+        "title": "Web development is fun again",
+        "link": "https://ma.ttias.be/web-development-is-fun-again/",
+        "published": "Sun, 04 Jan 2026 15:00:18 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46488576\">Comments</a>"
     }
 ]
