📚 Auto-update: News data refreshed - 2026-01-04 21:10 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -38470,5 +38470,45 @@
         "published": "Sun, 04 Jan 2026 15:00:18 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46488576\">Comments</a>"
+    },
+    {
+        "id": "https://www.engadget.com/computing/how-to-watch-the-nvidia-ces-2026-press-conference-with-jensen-huang-live-130028602.html?src=rss",
+        "title": "How to watch the NVIDIA CES 2026 press conference with Jensen Huang live",
+        "link": "https://www.engadget.com/computing/how-to-watch-the-nvidia-ces-2026-press-conference-with-jensen-huang-live-130028602.html?src=rss",
+        "published": "Sun, 04 Jan 2026 20:19:45 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<figure><img alt=\"NVIDIA AI Computing Card \" src=\"https://s.yimg.com/os/creatr-uploaded-images/2025-12/b0333b00-dcee-11f0-a993-97c527ebca4b\" style=\"height: 4000px; width: 6000px;\" /><figcaption>CFOTO via Getty Images</figcaption></figure>\n<p>During CES 2025, NVIDIA spent much of its keynote touting its leading position in artificial intelligence. Still, the company managed to squeeze in a few notable hardware announcements, including <a href=\"https://www.engadget.com/ai/everything-nvidia-ceo-jen"
+    },
+    {
+        "id": "https://github.com/huseyinbabal/taws",
+        "title": "Show HN: Terminal UI for AWS",
+        "link": "https://github.com/huseyinbabal/taws",
+        "published": "Sun, 04 Jan 2026 20:17:22 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46491749\">Comments</a>"
+    },
+    {
+        "id": "https://granda.org/en/2026/01/02/claude-code-on-the-go/",
+        "title": "Claude Code On-the-Go",
+        "link": "https://granda.org/en/2026/01/02/claude-code-on-the-go/",
+        "published": "Sun, 04 Jan 2026 19:48:20 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46491486\">Comments</a>"
+    },
+    {
+        "id": "https://www.bbc.com/future/article/20260102-how-i-changed-my-personality-in-six-weeks",
+        "title": "I changed my personality in six weeks",
+        "link": "https://www.bbc.com/future/article/20260102-how-i-changed-my-personality-in-six-weeks",
+        "published": "Sun, 04 Jan 2026 20:02:28 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46491623\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/belkin-connectair-ces-2026/",
+        "title": "This wireless HDMI adapter from Belkin lets you link devices from across the room",
+        "link": "https://www.zdnet.com/article/belkin-connectair-ces-2026/",
+        "published": "Sun, 04 Jan 2026 20:58:24 GMT",
+        "source": "Latest news",
+        "summary": "The Belkin ConnectAir, unveiled at CES, makes it easy to cast to any screen without an app or Wi-Fi."
     }
 ]
