📚 Auto-update: News data refreshed - 2026-01-04 22:11 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -38510,5 +38510,77 @@
         "published": "Sun, 04 Jan 2026 20:58:24 GMT",
         "source": "Latest news",
         "summary": "The Belkin ConnectAir, unveiled at CES, makes it easy to cast to any screen without an app or Wi-Fi."
+    },
+    {
+        "id": "https://techcrunch.com/2026/01/04/can-a-social-app-fix-the-terrible-devastation-of-social-media/",
+        "title": "Can a social app fix the \u2018terrible devastation\u2019 of social media?",
+        "link": "https://techcrunch.com/2026/01/04/can-a-social-app-fix-the-terrible-devastation-of-social-media/",
+        "published": "Sun, 04 Jan 2026 21:39:23 +0000",
+        "source": "TechCrunch",
+        "summary": "Twitter co-founder Biz Stone and Pinterest co-founder Evan Sharp have raised new funding for a social media app that helps users \"plan with intention.\""
+    },
+    {
+        "id": "https://techcrunch.com/2026/01/04/doordash-says-it-banned-driver-who-seemingly-faked-a-delivery-using-ai/",
+        "title": "DoorDash says it banned driver who seemingly faked a delivery using AI",
+        "link": "https://techcrunch.com/2026/01/04/doordash-says-it-banned-driver-who-seemingly-faked-a-delivery-using-ai/",
+        "published": "Sun, 04 Jan 2026 21:14:23 +0000",
+        "source": "TechCrunch",
+        "summary": "DoorDash seems to have confirmed a viral story about a driver using an AI-generated photo to lie about making a delivery."
+    },
+    {
+        "id": "https://www.engadget.com/computing/accessories/belkin-announces-a-wireless-hdmi-dongle-that-doesnt-need-wi-fi-access-215513179.html?src=rss",
+        "title": "Belkin announces a wireless HDMI dongle that doesn't need Wi-Fi access",
+        "link": "https://www.engadget.com/computing/accessories/belkin-announces-a-wireless-hdmi-dongle-that-doesnt-need-wi-fi-access-215513179.html?src=rss",
+        "published": "Sun, 04 Jan 2026 21:55:13 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Belkin has announced a plug-and-play casting system at CES 2026 that allows for screen sharing from a laptop, tablet or smartphone to another display without Wi-Fi or Bluetooth. The $150 ConnectAir Wireless HDMI Display Adapter comes with a USB-C transmitter dongle and a USB-A to HDMI receiver that can be connected to a TV, monitor or projector to wirelessly cast over a range of up to 131 feet (40 meters).&nbsp;</p><figure><img alt=\"Belkin's ConnectAir Wireless USB-C transmitter and HDMI rece"
+    },
+    {
+        "id": "https://www.engadget.com/home/smart-home/lg-reveals-its-laundry-folding-robot-at-ces-2026-215121021.html?src=rss",
+        "title": "LG reveals its laundry-folding robot at CES 2026",
+        "link": "https://www.engadget.com/home/smart-home/lg-reveals-its-laundry-folding-robot-at-ces-2026-215121021.html?src=rss",
+        "published": "Sun, 04 Jan 2026 21:51:21 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>LG has unveiled its humanoid robot that can handle household chores. After <a class=\"link\" href=\"https://www.engadget.com/home/smart-home/lg-will-show-off-a-humanoid-robot-for-household-chores-at-ces-2026-145411218.html\" target=\"_blank\">teasing</a> the CLOiD last week, the company has offered its first look at the AI-powered robot it claims can fold laundry, unload the dishwasher, serve food and help out with other tasks.&nbsp;</p><p>The CLOiD has a surprisingly cute &quot;head unit&quot; tha"
+    },
+    {
+        "id": "https://www.engadget.com/transportation/evs/how-to-watch-the-sony-honda-afeela-ces-2026-presentation-130048804.html?src=rss",
+        "title": "How to watch the Sony Honda Afeela CES 2026 presentation",
+        "link": "https://www.engadget.com/transportation/evs/how-to-watch-the-sony-honda-afeela-ces-2026-presentation-130048804.html?src=rss",
+        "published": "Sun, 04 Jan 2026 21:18:05 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<figure><img alt=\"Sony Honda Mobility\" src=\"https://s.yimg.com/os/creatr-uploaded-images/2025-12/3f099890-d9ef-11f0-a3f3-bb8a02df8254\" style=\"height: 1800px; width: 3200px;\" /><figcaption></figcaption></figure>\n<p>Sony's CES 2026 press conference is just a few days away, and this year comes with a twist: Rather than an overview of Sony's electronics, video game and Hollywood studio plans for the new year, the presser will have a more narrow focus: electric vehicles. Sound odd? That's because the"
+    },
+    {
+        "id": "https://bismarcktribune.com/news/local/government-politics/article_515812a0-d29a-4161-91f1-3e53003e2911.html",
+        "title": "North Dakota law lists fake critical minerals based on coal lawyers' names",
+        "link": "https://bismarcktribune.com/news/local/government-politics/article_515812a0-d29a-4161-91f1-3e53003e2911.html",
+        "published": "Sun, 04 Jan 2026 21:01:35 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46492161\">Comments</a>"
+    },
+    {
+        "id": "https://stats.stackexchange.com/questions/674129/why-does-a-linear-least-squares-fit-appear-to-have-a-bias-when-applied-to-simple",
+        "title": "Why does a least squares fit appear to have a bias when applied to simple data?",
+        "link": "https://stats.stackexchange.com/questions/674129/why-does-a-linear-least-squares-fit-appear-to-have-a-bias-when-applied-to-simple",
+        "published": "Sun, 04 Jan 2026 20:25:30 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46491821\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/hyper-trackpad-pro-ces-announcements/",
+        "title": "This multifunctional trackpad may be the most exciting PC accessory at CES (and it has a price)",
+        "link": "https://www.zdnet.com/article/hyper-trackpad-pro-ces-announcements/",
+        "published": "Sun, 04 Jan 2026 21:34:14 GMT",
+        "source": "Latest news",
+        "summary": "Hyper announced a release date for its much-anticipated TrackPad Pro ahead of CES 2026."
+    },
+    {
+        "id": "https://www.zdnet.com/article/pebble-round-2-analog-watch-ces/",
+        "title": "Pebble's newest e-paper smartwatch is for enthusiasts who want the analog feel",
+        "link": "https://www.zdnet.com/article/pebble-round-2-analog-watch-ces/",
+        "published": "Sun, 04 Jan 2026 21:20:00 GMT",
+        "source": "Latest news",
+        "summary": "It's thin and has an e-paper display with 10 days of battery life."
     }
 ]
