--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -38582,5 +38582,29 @@
         "published": "Sun, 04 Jan 2026 21:20:00 GMT",
         "source": "Latest news",
         "summary": "It's thin and has an e-paper display with 10 days of battery life."
+    },
+    {
+        "id": "https://www.engadget.com/computing/how-to-watch-the-amd-ces-2026-keynote-with-ceo-lisa-su-live-190012438.html?src=rss",
+        "title": "How to watch the AMD CES 2026 keynote with CEO Lisa Su live",
+        "link": "https://www.engadget.com/computing/how-to-watch-the-amd-ces-2026-keynote-with-ceo-lisa-su-live-190012438.html?src=rss",
+        "published": "Sun, 04 Jan 2026 22:43:56 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>AMD is kicking off <a href=\"https://www.engadget.com/big-tech/ces-2026-what-to-expect-when-techs-biggest-conference-starts-on-january-4-120000189.html\">CES 2026</a> on Monday, where it'll cover its latest AI developments and perhaps show off its newest Ryzen chips. The company will outline the full scope of its vision for AI implementations across the full spectrum of consumer and enterprise applications. The presentation \u2014 which is the <a href=\"https://www.prnewswire.com/in/news-releases/dr-"
+    },
+    {
+        "id": "https://www.pentestpartners.com/security-blog/eurostar-ai-vulnerability-when-a-chatbot-goes-off-the-rails/",
+        "title": "Eurostar AI vulnerability: when a chatbot goes off the rails",
+        "link": "https://www.pentestpartners.com/security-blog/eurostar-ai-vulnerability-when-a-chatbot-goes-off-the-rails/",
+        "published": "Sun, 04 Jan 2026 20:52:52 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46492063\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/xreal-1s-glasses-review/",
+        "title": "These XR glasses gave me a 170-inch screen to work with - but it's killer feature is unexpected",
+        "link": "https://www.zdnet.com/article/xreal-1s-glasses-review/",
+        "published": "Sun, 04 Jan 2026 22:21:00 GMT",
+        "source": "Latest news",
+        "summary": "Delivering a superb 3D experience at a reasonable price, the Xreal 1S sets a new bar for sub-$500 AR glasses."
     }
 ]
